# keeperfx

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  groups  project.config  vcpkg.json
src/: bflib_cpu.c  bflib_cpu.h  bflib_math.c  bflib_memory.c  config_creature.c  config_creature.h  config_magic.c  config_magic.h  custom_sprites.c  frontmenu_ingame_tabs.c  game_merge.h  globals.h  light_data.c  lvl_filesdk1.c  lvl_script_commands.c  lvl_script_value.c  magic.c  main.cpp  thing_creature.c  thing_list.c  thing_list.h  thing_traps.c  time_helper.h
src/creature/: CreatureTree.cpp  CreatureTree.hpp  creature_tree_api.h
tests/: CMakeLists.txt  test_CreatureTree.cpp
